<resources>
    <string name="app_name">MovieApp</string>
    <string name="lbl_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_movie_time">1h 45min</string>
    <string name="lbl_story_line">Director Christopher Nolan\'s ambitious, three-hour film Oppenheimer, about the US theoretical physicist who led the development of the world\'s first nuclear weapons, opened in UK and US cinemas on 21 July to widespread acclaim</string>
    <string name="lbl_release_date">Release Date</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_date">2023-07-21</string>
    <string name="genre">Action, Crime, Drama</string>
    <string name="lbl_actors">Cillian Murphy, Emily Blunt, Matt Damon</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_see_more"><u>See More</u></string>
    <string name="lbl_give_ratings">Give Ratings</string>
    <string name="lbl_rating_count">24 rating available</string>
</resources>